2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03413] Re: setting form on loading
	* form.c (loadPreForm): add textarea
		(preFormUpdateBuffer): submit if value is matched as well
				case FORM_TEXTAREA
				case FORM_SELECT ifdef MENU_SELECT

2002-11-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03411] do AUXBIN_TARGETS
	* scripts/Makefile (all): add AUXBIN_TARGETS
			(clean): add AUXBIN_TARGETS

2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03408] edit From in w3mail.cgi 
	* scripts/w3mmail.cgi.in: edit from as well

2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03408] fix Bug#87472
	    MOUSE_SCROLL_LINE should be a run-time option
	* fm.h (relative_wheel_scroll): added
		(fixed_wheel_scroll_count): added
		(relative_wheel_scroll_ratio): added
	* main.c (mouse_scroll_line): added
		(process_mouse): s/MOUSE_SCROLL_LINE/mouse_scroll_line()/
	* menu.c (MOUSE_SCROLL_LINE): deleted
	* terms.h (MOUSE_SCROLL_LINE): deleted
	* rc.c (CMT_RELATIVE_WHEEL_SCROLL): added
		(CMT_RELATIVE_WHEEL_SCROLL_RATIO): added
		(CMT_FIXED_WHEEL_SCROLL_COUNT): added
		(wheelmode): added
		(params3): add relative_wheel_scroll,
				relative_wheel_scroll_ratio,
				fixed_wheel_scroll_count
	* NEWS: updated

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03407] char GlobalKeymap -> unsigned char GlobalKeymap
	* fm.h (GlobalKeymap): char->unsigned char
		(EscKeymap): ditto
		(EscBKeymap): ditto
		(EscDKeymap): ditto
		(PcKeymap): ditto
	* keybind.c: ditto
	* keybind_lynx.c: ditto

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03406]
	* scripts/Makefile: add AUXBIN_DIR
			update LIB_DIR, HELP_DIR
			xface2xpm installed in AUXBIN_DIR
	* scripts/multipart/Makefile: update LIB_DIR
	* scripts/w3mman/Makefile: update LIB_DIR

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03405] Re: tab browser
	* main.c (moveTab): B_FORCE_REDRAW
